
- Updated javacc mode to better highlight keywords and regular expressions. (Dale Anson)

- Updated Django temlate mode to Django 1.2, added missing keywords
  and better integration with HTML, CSS and JS (Jakub Roztočil)

}}}
{{{ Miscellaneous

- Replaced the links to Java 5 documentation with links to Java 6 documentation
  (Björn "Vampire" Kautler)

- README.SRC.txt cleanup (Björn "Vampire" Kautler)

- Made the Windows installer correctly show special characters like german
  umlauts (Björn "Vampire" Kautler)

- Made the filter tasks use UTF-8 encoding as all our files are UTF-8 encoded
  (Björn "Vampire" Kautler)

- build files and properties cleanup (Björn "Vampire" Kautler)

- Fixed various indentation errors (Björn "Vampire" Kautler)

- Wrap mode tooltip in status bar now indicates the current wrap mode (Matthieu Casanova)

- Made the Deb Ant task compatible to Ant 1.8+ (Björn "Vampire" Kautler)

- It is now possible to copy several files in the VFS Browser at the same time,
  and copy from/to the OS explorer (Matthieu Casanova)

- Removed LatestVersion plugin.

- HelpViewer font can be configured via Appearance Option Pane. (#3002186 - Alan Ezust)

- Added actions for eating whitespace at word ends in both directions
  for findWordStart. (#1953341 - strank)

- Added a configurable selection foreground color. If set, this color will be
  used for the selection foreground instead of the syntax highlighting color.
  The new option can be set from Global Options -> Text Area.
  (Shlomy Reinstein)

- Implemented feature request #2919875: Namable views. You can now specify a
  name for each view using View -> Set view title. The name is persistent in the
  perspective.xml file.

- In Hypersearch results panel, the query string length is now limited to 100
  chars by default for display (Matthieu Casanova)

- Applied patch #2887520: Allow filtering the recent file list using file globs,
  e.g. "*.java" or "{*.c,*.h}". (Patch provided by Joerg Spieler)
